# vector_demo
add_executable(vector_demo sequential_container/vector_demo.cpp)

# deque_demo
add_executable(deque_demo sequential_container/deque_demo.cpp)

# list_demo
add_executable(list_demo sequential_container/list_demo.cpp)

# list_contact
add_executable(list_contact sequential_container/list_contact.cpp)

# set demo
add_executable(set_demo associative_container/set_demo.cpp)

# map demo
add_executable(map_demo associative_container/map_demo.cpp)